# nestri

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Containerfile.cachyos  Containerfile.master  Containerfile.relay  Containerfile.runner  LICENSE  README.md  base.Dockerfile  bun.lockb  docker-compose.yml  ffmpeg.Dockerfile  install-beta.sh  package-lock.json  package.json  partykit.json  recorder.Dockerfile  relay.Dockerfile  server.Dockerfile  sst-env.d.ts  sst.config.ts  test.Dockerfile  turbo.json  warp-input.Dockerfile  warp.Dockerfile
.certs/: go.mod  go.sum
.dev/: script.sh  testing.sh  x11.sh
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  labeler.yml  labels.yml  pull_request_template.md  release-drafter.yml
.github/workflows/: autolabeler.yml  autolabeller.yml  base.yml  ffmpeg.yml  labels.yml  recorder.yml  relay.yml  release-drafter.yml  runner.yml  server.yml  sst.yml  warp-input.yml  warp.yml
.patches/: connectcheckskip.patch  devicearg.patch
.scripts/: default.pa  entrypoint.sh  gpu  gpu_helpers.sh  proton  startup.sh  supervisord.conf
.scripts/supervisord.d/: game.ini
.tests/: Containerfile.ubuntu-24.04  weston-connectless.ini
.tests/borealis/: Dockerfile  get_sub_repo_version.sh
.tests/borealis/etc/: TODO  drirc  pacman.conf  pacman.conf.common  pacman.conf.db  vm_crash_filter.textproto
.tests/borealis/etc/acpi/: handler.sh
.tests/borealis/etc/init.d/: crash-reporter  cros-garcon  dbus-launch-session-bus  dbus-system-bus  dev-setup  fix-traffic-class  log-disk  metric-collector  mount-external  mount-gpu-precompiled-cache  mount-home  mount-stateful  mount-tracefs  pipewire  proton-user-settings  pulseaudio  setup-cache-dir  setup-config-dir  sommelier-wait  sommelier-x  swap-space  trim-filesystem  tuning  udev  wait-for-journald  wireplumber
.tests/borealis/etc/launch-wrapper.d/: 1030830.sh  1030840.sh  1092790.sh  1172620.sh  1286680.sh  (+31 more)
.tests/borealis/pkgconfig/: perfetto.pc.sh  wayland-scanner.pc
.tests/borealis/sommelier/: BUILD.gn  OWNERS  README.md  TESTING.md  gaming.md  gen-shim.py  meson.build  meson_options.txt  shim_gen.gni  sommelier-ctx.cc  sommelier-ctx.h  sommelier-data-device-manager.cc  sommelier-display.cc  sommelier-fractional-scale.cc  sommelier-gaming-test.cc  sommelier-gaming.cc  sommelier-global.cc  sommelier-global.h  sommelier-gtk-shell.cc  sommelier-idle-inhibit-manager.cc  sommelier-inpututils.cc  sommelier-inpututils.h  sommelier-logging.cc  sommelier-logging.h  sommelier-main.cc  sommelier-output-test.cc  sommelier-output.cc  sommelier-pointer-constraints.cc  sommelier-relative-pointer-manager.cc  sommelier-scope-timer.cc  sommelier-scope-timer.h  sommelier-seat.cc  sommelier-shell.cc  sommelier-stylus-tablet.cc  sommelier-stylus-tablet.h  sommelier-subcompositor.cc  sommelier-test-main.cc  sommelier-test.cc  sommelier-text-input.cc  sommelier-timing.cc  (+23 more)
.tests/borealis/sommelier/compositor/: OWNERS  sommelier-compositor.cc  sommelier-dmabuf-sync.cc  sommelier-dmabuf-sync.h  sommelier-drm.cc  sommelier-formats.cc  sommelier-formats.h  sommelier-linux-dmabuf-test.cc  sommelier-linux-dmabuf-test.h  sommelier-linux-dmabuf.cc  sommelier-linux-dmabuf.h  sommelier-mmap.cc  sommelier-mmap.h  sommelier-shm.cc
.tests/borealis/sommelier/libevdev/: libevdev-shim.cc  libevdev-shim.h  mock-libevdev-shim.h
.tests/borealis/sommelier/protocol/: aura-shell.xml  gaming-input-unstable-v2.xml  gtk-shell.xml  keyboard-extension-unstable-v1.xml  linux-dmabuf-unstable-v1.xml  linux-explicit-synchronization-unstable-v1.xml  pointer-constraints-unstable-v1.xml  relative-pointer-unstable-v1.xml  text-input-crostini-unstable-v1.xml  text-input-x11-unstable-v1.xml  xdg-shell.xml
.tests/borealis/sommelier/quirks/: quirks.proto  sommelier-quirks-test.cc  sommelier-quirks.cc  sommelier-quirks.h
.tests/borealis/sommelier/scripts/: buffer_stats.py  get_frame_summary.py
.tests/borealis/sommelier/virtualization/: OWNERS  virtgpu_channel.cc  virtgpu_cross_domain_protocol.h  virtwl_channel.cc  wayland_channel.h
.tests/borealis/sommelier/virtualization/linux-headers/: virtgpu_drm.h
.tests/borealis/sommelier/xcb/: fake-xcb-shim.cc  fake-xcb-shim.h  mock-xcb-shim.h  xcb-shim.cc  xcb-shim.h
.tests/borealis/stamp/: sommelier
.tests/crosvm/: runvm.sh  setup_network
.tests/crosvm-git/: Dockerfile  build.sh  build_docker.sh  find_supported_pci.sh  run-arch-basic.sh  run-debian12-basic.sh  run-debian12-full.sh  run-debian12-gpu.sh  run-debian12-net.sh  run-debian12-wl.sh  run-debian12-wl2.sh  run-debian12-wlnew.sh  run-debian12-x.sh  test_docker.sh  test_docker2.sh
.tests/crosvm-git/opensus/: build.sh  run-osus-full.sh
.tests/gst-wayland/: Containerfile  Containerfile.moq  Containerfile.stable
.tests/vmlinuz/: Dockerfile  PKGBUILD  README.md
apps/docs/: .eslintrc.js  README.md  app.config.ts  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js  tokens.config.ts  tsconfig.json  vite.config.ts.timestamp-1725381693400-a4b95b20ff36f.mjs
apps/docs/app/: page.tsx
apps/docs/components/: AppSocialIcons.vue  Logo.vue
apps/docs/content/: 0.index.md
apps/docs/public/: manifest.json
apps/docs/src/: root.tsx
apps/nexus/: README.md  bun.lockb  package.json  wrangler.toml
apps/react/: package.json  vite.config.ts
apps/relay/: .dockerignore  Dockerfile
apps/relay/src/: ping-cloudflare.ts
apps/www/: .eslintrc.cjs  .eslintrc.js  .gitignore  README.md  content-collections.ts  mdx.vite.ts  nestri-env.d.ts  package.json  pnpm-lock.yaml  postcss.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1725381693395-20fb1cc98f8fc.mjs
apps/www/.create-qwik-28s64ekndxx/: package.json
apps/www/public/: manifest.json
apps/www/src/: global.css  root.tsx
certs/: .gitignore  .terraform.lock.hcl  terraform.tfstate
containers/: relay.Containerfile  runner.Containerfile
dev/: build.sh  run-input.sh  run.sh
infra/: RELAY.md  api.ts  certificate.ts  cluster.ts  dns.ts  domain.ts  github.ts  relay.ts  secrets.ts  stage.ts  www.ts
(+165 files in other folders)
