[workspace]
resolver = "2"
members = [
    "packages/server",
    "packages/relay/dev"
]

[workspace.package]
version = "0.1.0-alpha.1"
repository = "https://github.com/nestriness/nestri"
edition = "2021"
rust-version = "1.80"

[workspace.dependencies]
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = ["v1_24"] }
gst-webrtc = { package = "gstreamer-webrtc", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = ["v1_24"] }
gstrswebrtc = { package = "gst-plugin-webrtc", git = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs", branch = "main", features = ["v1_22"] }
